# cement-imbalance

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: cleaning_contract.yaml  closure_contract_v1.yaml  column_groups.yaml  cvae_cnf.yaml  f7_artifact_persistence_contract_v1.yaml  f7_campaign_block13_validation_extension2_v1.yaml  f7_campaign_block13_validation_extension_v1.yaml  f7_campaign_block13_validation_primary_v1.yaml  f7_campaign_extension1_v1.yaml  f7_campaign_extension2_v1.yaml  f7_campaign_extension3_v1.yaml  f7_campaign_pilot_v1.yaml  f7_campaign_spec_v1.yaml  f7_class_ontology_v1.yaml  f7_dataset_inventory_v1.csv  f7_dataset_inventory_v1.yaml  f7_evaluation_population_contract_v1.yaml  f7_factor_parser_contract_v1.yaml  f7_feature_schema_contract_v1.yaml  f7_meta_grammar_v1.yaml  f7_metric_aggregation_contract_v1.yaml  f7_metric_availability_contract_v1.yaml  f7_metric_grammar_v1.yaml  f7_mlp_base_v1.yaml  f7_mlp_baseline_revalidation_v1.yaml  f7_mlp_baseline_revalidation_v2.yaml  f7_mlp_baseline_revalidation_v3.yaml  f7_mlp_interpretability_contract_v1.yaml  f7_prediction_row_join_contract_v1.yaml  f7_raw_metric_contract_v1.yaml  f7_seed_panel_block13_validation_extension2_v1.yaml  f7_seed_panel_block13_validation_extension_v1.yaml  f7_seed_panel_block13_validation_primary_v1.yaml  f7_seed_panel_extension1_v1.yaml  f7_seed_panel_extension2_v1.yaml  f7_seed_panel_extension3_v1.yaml  f7_seed_panel_pilot_v1.csv  f7_seed_panel_pilot_v1.yaml  f7_seed_panel_v1.csv  f7_seed_panel_v1.yaml  (+17 more)
data/: cleaning.py  dataset_contract.py  kmeans_smote_joint.py  (+7 more)
(+211 files in other folders)
